# blocky

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  meson.build
.cargo/: config.toml
.github/workflows/: ci.yml
blocky/: .gitignore  Cargo.toml  meson.build  meson_options.txt
blocky-core/: .gitignore  Cargo.toml
blocky-core/src/: consts.rs  error.rs  lib.rs  os.rs  utils.rs
blocky/data/: at.stefan99353.Blocky.gschema.xml.in  at.stefan99353.Blocky.metainfo.xml.in.in
blocky/data/resources/: resources.gresource.xml
blocky/data/resources/ui/: content_box.ui  edit_instance_dialog.ui  fabric_version_selection_dialog.ui  instance_group.ui  instance_page.ui  instance_row.ui  new_profile_dialog.ui  preferences_window.ui  shortcuts.ui  window.ui
blocky/po/: POTFILES.in
blocky/src/: main.rs  meson.build  settings.rs
blocky/src/helpers/: error.rs  fabric.rs  installation.rs  instances.rs  launching.rs  mod.rs  profiles.rs  version_manifest.rs
blocky/src/managers/: instance_manager.rs  profile_manager.rs
blocky/src/ui/: edit_instance_dialog.rs  fabric_version_selection_dialog.rs  install_progress_dialog.rs  instance_group.rs  instance_page.rs  instance_row.rs  mod.rs  new_instance_dialog.rs  new_profile_dialog.rs  version_summary_row.rs  window.rs
blocky/src/utils/: fabric_loader_summary.rs  mod.rs  version_summary.rs
build-aux/: at.stefan99353.Blocky.Devel.json
data/: at.stefan99353.Blocky.desktop.in.in  at.stefan99353.Blocky.gschema.xml.in  at.stefan99353.Blocky.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
libblocky/: Cargo.toml
libblocky/src/: download.rs  either.rs  error.rs  lib.rs  os.rs
libblocky/src/gobject/: instance.rs  mod.rs  profile.rs  version_summary.rs
libblocky/src/helpers/: error.rs  installation.rs  instances.rs  launching.rs  mod.rs  profiles.rs  version_manifest.rs
libblocky/src/instance/: download.rs  extract.rs  mod.rs  paths.rs
libblocky/src/instance/install/: asset_index.rs  assets.rs  check.rs  client.rs  error.rs  libraries.rs  log_config.rs  mod.rs  version_data.rs
libblocky/src/instance/launch/: argument_replacements.rs  error.rs  launch_options.rs  mod.rs  utils.rs
libblocky/src/instance/models/: arguments.rs  artifact.rs  asset_index.rs  asset_index_data.rs  downloads.rs  file.rs  library.rs  library_downloads.rs  logging_info.rs  mod.rs  natives.rs  version_data.rs  version_manifest.rs  version_summary.rs  version_type.rs
libblocky/src/profile/: authentication.rs  error.rs  minecraft.rs  mod.rs  xbox_live.rs  xbox_live_security.rs
po/: POTFILES.in
src/: application.rs  config.rs.in  main.rs  meson.build  paths.rs  settings.rs  window.rs
(+106 files in other folders)
