[package]
name = "blocky"
version = "0.1.0"
authors = ["Stefan Rupertsberger <s.rupertsberger@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gio = "0.15.10"
glib = "0.15.10"
gtk-macros = "0.3.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
libblocky = { path = "libblocky", features = ["gobject", "helpers"] }
log = "0.4.16"
once_cell = "1.10.0"
pretty_env_logger = "0.4.0"
uuid = "0.8.2"

[dependencies.adw]
package = "libadwaita"
version = "0.1.1"

[dependencies.gtk]
package = "gtk4"
version = "0.4.7"
